--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "lint": "eslint **/*.ts",
-    "lint-fix": "eslint **/*.ts --fix"
+    "lint-fix": "eslint **/*.ts --fix",
+    "prepack": "yarn build",
+    "postversion": "git push && git push --tags"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
