--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@movesfinancial/unit-node-sdk",
-  "version": "0.6.2-fork.8",
+  "version": "0.6.2-fork.9-beta.1",
   "description": "",
   "main": "dist/unit.js",
   "types": "dist/unit.d.ts",
