--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@movesfinancial/unit-node-sdk",
-  "version": "0.8.17-fork.7",
+  "version": "0.8.17-feat-add-filter-non-authorized.0",
   "description": "",
   "main": "dist/unit.js",
   "types": "dist/unit.d.ts",
