--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,14 +1,21 @@
 name: CI
-on: [pull_request]
+on: [pull_request_target]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          ref: ${{github.event.pull_request.head.sha}}
       - uses: actions/setup-node@v1
         with:
           node-version: 16.x
       - run: npm ci
       - run: npm run lint
       - run: npm run build
+      - run: |
+          touch .env
+          echo UNIT_TOKEN=${{ secrets.UNIT_TOKEN }} >> .env
+          echo UNIT_API_URL=${{ secrets.UNIT_API_URL }} >> .env
+      - run: npm run test
