--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@movesfinancial/unit-node-sdk",
-  "version": "0.8.17-fork.10",
+  "version": "0.9.35-fork.1",
   "description": "",
   "main": "dist/unit.js",
   "types": "dist/unit.d.ts",
@@ -8,7 +8,7 @@
     "dist/**"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest .spec.ts --maxWorkers=1 --no-cache",
     "build": "tsc",
     "lint": "eslint **/*.ts",
     "lint-fix": "eslint **/*.ts --fix",
@@ -28,15 +28,17 @@
   },
   "homepage": "https://github.com/movesfinancial/unit-node-sdk#readme",
   "devDependencies": {
+    "@types/jest": "^27.0.1",
     "@types/node": "^15.0.2",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
     "dotenv": "^10.0.0",
-    "eslint": "^8.0.1",
+    "eslint": "^8.8.0",
+    "jest": "^27.0.6",
+    "ts-jest": "^27.0.3",
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "axios": "^0.21.2",
-    "crypto": "^1.0.1"
+    "axios": "^0.26.1"
   }
 }
